--- a/WebContent/my.css
+++ b/WebContent/my.css
@@ -1,11 +1,17 @@
 #stream{
     width:100%;
-    height:500px
+    height:300px
 }
 #response{
     width:100%;
-    height:500px
+    height:300px
 }
+
+.response textarea{
+	width:100%;
+	height:300px;
+}
+
 #query{
     width:100%;
 }
